# biosynth

./: .gitignore  Cargo.toml  build.rs  desktop.ini  evolve2.code-workspace  icon.rc  index.html
docs/: .todo  brainstorm.drawio  changelog.md  manual.txt  roadmap.md  serde.json
old/: agent.rs  agent2.rs  being.rs  element.rs  kinetic.rs  object.rs  particle.rs  progress_bar.rs  world.rs
src/: agent.rs  agent2.rs  being.rs  camera.rs  collector.rs  collector2.rs  consts.rs  food.rs  globals.rs  jet.rs  main.rs  misc.rs  mod.rs  monit.rs  net_draw.rs  neural.rs  neuro.rs  part.rs  physics.rs  physics_misc.rs  plant.rs  progress_bar.rs  ranking.rs  resource.rs  settings.rs  signals.rs  sim.rs  sketch.rs  statistics.rs  stats.rs  terrain.rs  timer.rs  ui.rs  unit.rs  util.rs  world.rs
src/phyx/: mod.rs  physics.rs  physics_misc.rs
