[package]
name = "evolve"
version = "0.8.16"
edition = "2021"
authors = ["Artur Gwoździowski <gwozdyk@gmain.com>"]
description = '''
    Evolve' simulation project. 
    Currently in development stage.
    dev-0.8: working on terrain features.
    dev-0.8.1: cleanup, better render attack and eat, decrease size impact on fight, some ui changes 
'''
keywords = [
    "physics", "sandbox", "simulation", 
    "neuroevolution", "neural network", "genethics algorithm", 
    "artificial inteligence", "synthetic biology"
]



[dependencies]
macroquad = "0.3.26"
rapier2d = { version = "0.18.0", features = [ "simd-stable" ] }
egui-macroquad = {version = "0.15.0"}
egui_extras = {version = "0.26.2", features = ["image"]}
image = "0.24.8"
serde_json = "1.0.114"
serde = "1.0.197"
noise = "0.8.2"
rand = "0.8.5"
base64 = "0.21.7"

[build-dependencies]
embed-resource = "2.4.1"
