[package]
name = "evolve"
version = "1.0.13"
edition = "2021"
authors = ["Artur Gwoździowski <gwozdyk@gmain.com>"]

description = '''
    Evolve' simulation project. 
    Currently in development stage.
'''
keywords = [
    "physics", "sandbox", "simulation", 
    "neuroevolution", "neural network", "genethics algorithm", 
    "artificial inteligence", "synthetic biology"
]



[dependencies]
macroquad = "0.3.26"
rapier2d = { version = "0.22.0", features = [ "simd-stable", "debug-render" ] }
egui-macroquad = {version = "0.15.0"}
egui_extras = {version = "0.28.1", features = ["image"]}
image = "0.25.2"
serde_json = "1.0.120"
serde = "1.0.204"
noise = "0.9.0"
rand = "0.8.5"
base64 = "0.22.1"

[build-dependencies]
embed-resource = "2.4.3"
